# teachless

./: README.md  pyproject.toml  teachless.py
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-request-a-feature.yml  3-documentation-or-readme-problem.yml
.github/workflows/: codeql-analysis.yml
