[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "teachless"
version = "0.1.0"
authors = [
  { name="Yaron Koresh", email="aharonkoresh1@gmail.com" },
]
description = "Open source software for model training and prediction."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "spaces",
    "gradio", 
    "definers[cuda] @ git+https://github.com/YaronKoresh/definers.git"
]

[project.urls]
"Homepage" = "https://github.com/YaronKoresh/teachless"
"Bug Tracker" = "https://github.com/YaronKoresh/teachless/issues"

[project.scripts]
teachless = "teachless:main"

[tool.setuptools]
py-modules = ["teachless"]