[build-system]
requires = ["setuptools>=61.0,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "teachless"
version = "0.1.0"
authors = [
  { name="Yaron Koresh", email="aharonkoresh1@gmail.com" },
]
description = "Open source software for model training and prediction."
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "spaces>=0.42.0,<0.43.0",
    "gradio==5.48.0",
    "numpy==1.26.4",
    "pandas>=2.2.0,<=2.2.2",
    "pyarrow<16.2.0a0,>=16.1.0",
    "aiohttp>=3.13.3",
    "attrs<24.0.0,>=23.0.0",
    "yarl<1.21.0,>=1.20.0",
    "fsspec>=2024.5.0,<2025.0.0",
    "datasets>=4.0.0,<5.0.0",
    "aiofiles>=23.2.0,<23.3.0",
    "anyio>=4.10.0,<4.11.0",
    "click>=8.2.0,<8.3.0",
    "fastapi==0.118.0",
    "filelock>=3.20.1",
    "huggingface-hub>=0.34.0,<0.35.0",
    "idna>=3.10,<3.11",
    "uvicorn==0.37.0",
]

[project.urls]
"Homepage" = "https://github.com/YaronKoresh/teachless"
"Bug Tracker" = "https://github.com/YaronKoresh/teachless/issues"

[project.scripts]
teachless = "teachless:main"

[tool.setuptools]
py-modules = ["teachless"]
